--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
-// Para que reconozca los botones del XML sin necesidad de findViewById necesitamos este plugin.
+// Para que AndroidStudio reconozca los botones del XML sin necesidad de findViewById necesitamos este plugin.
 apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'com.google.gms.google-services'
